--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:30a0312a2989e04cfe3c789746f29e97107c2ed02f6b2921092ecf2e51a4d2b7"
+  "signature": "sha256:30b6d816aeec32b1e3b5cd7520ba30c7f89c3619209016c2de0525f74db1128d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -903,8 +903,13 @@
       "print d1,d2\n",
       "\n",
       "def geraEq(a,b,c):\n",
+      "    # observem o alinhamento\n",
+      "    # vou criar uma fun\u00e7\u00e3o que recebe x como entrada\n",
+      "    # e retorna a eq. do segundo grau definida por\n",
+      "    # a,b,c\n",
       "    def eq2(x):\n",
       "        return a*x**2 + b*x + c\n",
+      "    # retorno minha fun\u00e7\u00e3o criada\n",
       "    return eq2\n",
       "\n",
       "fx = geraEq(3,2,-10)\n",
@@ -923,7 +928,7 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
