--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:30b6d816aeec32b1e3b5cd7520ba30c7f89c3619209016c2de0525f74db1128d"
+  "signature": "sha256:e3315fc5a03d6a569cbab05a34bfa3b44ccd699b4fee577a8d02908a742959e9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -129,13 +129,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 1,
        "text": [
-        "<IPython.core.display.HTML at 0x7fe09e7f9a10>"
+        "<IPython.core.display.HTML at 0x7f7bd4520850>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -185,9 +185,11 @@
       "\n",
       "Al\u00e9m disso temos dispon\u00edvel o comando `print` para mostrar na tela os resultados dessas opera\u00e7\u00f5es:\n",
       "\n",
-      "`print 1+2 # imprime o valor 3 na tela`\n",
+      "```python\n",
+      "print 1+2 # imprime o valor 3 na tela\n",
+      "```\n",
       "\n",
-      "Todo texto ap\u00f3s `#` se torna um coment\u00e1rio e n\u00e3o \u00e9 interpretado pelo computador."
+      "Nota: Todo texto ap\u00f3s `#` se torna um coment\u00e1rio e n\u00e3o \u00e9 interpretado pelo computador."
      ]
     },
     {
@@ -336,13 +338,20 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 7,
        "text": [
-        "<IPython.core.display.HTML at 0x7fe09d32bdd0>"
+        "<IPython.core.display.HTML at 0x7f7bd4520150>"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Os valores `nan` representam que o resultado n\u00e3o \u00e9 um valor num\u00e9rico v\u00e1lido, tendo sido ocasionado pelo c\u00e1lculo de `log(0.0)`."
+     ]
     },
     {
      "cell_type": "heading",
@@ -364,16 +373,21 @@
       "\n",
       "Se soubermos os n\u00fameros iniciais, digamos que s\u00e3o 2 e 3, basta escrevermos o seguinte c\u00f3digo:\n",
       "\n",
-      "`print (2+3)/2.0`\n",
+      "```python\n",
+      "print (2+3)/2.0\n",
+      "```\n",
       "\n",
       "Por\u00e9m n\u00e3o seria um programa muito \u00fatil se tivermos que alter\u00e1-lo para cada valor que queremos calcular. O ideal seria realizar um procedimento de entrada de valores do usu\u00e1rio e armazen\u00e1-los na mem\u00f3ria do computador para realizar as opera\u00e7\u00f5es.\n",
-      "Para armazenar um valor na mem\u00f3ria utilizamos o conceito de vari\u00e1veis. Assim como vari\u00e1veis matem\u00e1ticas, as vari\u00e1veis computacionais servem para generalizar uma express\u00e3o e, ao mesmo, armazenar dados para uso posterior.\n",
+      "Para armazenar um valor na mem\u00f3ria utilizamos o conceito de vari\u00e1veis. Assim como vari\u00e1veis matem\u00e1ticas, as vari\u00e1veis computacionais servem para generalizar uma express\u00e3o e, ao mesmo tempo, armazenar dados para uso posterior.\n",
       "\n",
       "Para utilizarmos vari\u00e1veis no Python basta dar um nome a ela e, em seguida, atribuir um valor utilizando o operador `=`:\n",
       "\n",
-      "`x = 10  # o computador ir\u00e1 guardar o valor 10 na vari\u00e1vel de nome x`\n",
+      "```python\n",
+      "# o computador armazena o valor 10 na vari\u00e1vel de nome x\n",
+      "x = 10 \n",
+      "```\n",
       "\n",
-      "Uma vez que tal vari\u00e1vel tem um valor, podemos realizar qualquer opera\u00e7\u00e3o com ela, desde que o tipo do valor armazenado nela permita."
+      "Uma vez que tal vari\u00e1vel tem um valor, podemos realizar qualquer opera\u00e7\u00e3o com ela:"
      ]
     },
     {
@@ -431,9 +445,9 @@
      "metadata": {},
      "source": [
       "Ao alterar os valores de `x` e `y`, o programa retorna o resultado da nova m\u00e9dia.\n",
-      "Podemos pedir entrada do usu\u00e1rio atrav\u00e9s do comando `input()`.\n",
+      "Podemos pedir que o usu\u00e1rio entre com os valores utilizando o comando `input()`.\n",
       "\n",
-      "Esse comando vai esperar que o usu\u00e1rio digite algum valor e atribuir\u00e1 em uma vari\u00e1vel."
+      "Esse comando vai esperar que o usu\u00e1rio digite algum valor e a atribuir\u00e1 em uma vari\u00e1vel."
      ]
     },
     {
@@ -547,7 +561,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Al\u00e9m dos tipos num\u00e9ricos temos tamb\u00e9m os tipos l\u00f3gicos que podem conter o valor de verdadeiro(`True`) ou falso (`False`). Esses valores s\u00e3o gerados atrav\u00e9s de operadores relacionais:\n",
+      "Al\u00e9m dos tipos num\u00e9ricos temos tamb\u00e9m os tipos l\u00f3gicos que podem conter o valor de verdadeiro (`True`) ou falso (`False`). Esses valores s\u00e3o gerados atrav\u00e9s de operadores relacionais:\n",
       "\n",
       "* Igualdade: `1 == 2` => `False`\n",
       "* Desigualdade: `1 != 2` => `True`\n",
@@ -597,32 +611,6 @@
       }
      ],
      "prompt_number": 54
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Repare que o Python permite utilizarmos opera\u00e7\u00f5es de adi\u00e7\u00e3o e multiplica\u00e7\u00e3o em tipos l\u00f3gicos, nesse caso o valor verdadeiro representa 1 e o valor falso, 0."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print True + True, True + False, True * True, True * False"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2 1 1 0\n"
-       ]
-      }
-     ],
-     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
@@ -742,13 +730,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 18,
+       "prompt_number": 8,
        "text": [
-        "<IPython.core.display.HTML at 0x7fe09d32bb50>"
+        "<IPython.core.display.HTML at 0x7f7bd45200d0>"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -766,13 +754,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 9,
        "text": [
-        "<IPython.core.display.HTML at 0x7fe09d32bd10>"
+        "<IPython.core.display.HTML at 0x7f7bd45202d0>"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -800,12 +788,16 @@
       "\n",
       "Em Python podemos criar fun\u00e7\u00f5es utilizando a instru\u00e7\u00e3o `def`:\n",
       "\n",
-      "`def minhaEq(x):\n",
-      "    return 3*x**2 + 2*x - 10`\n",
+      "```python\n",
+      "def minhaEq(x):\n",
+      "    return 3*x**2 + 2*x - 10\n",
+      "```    \n",
       "\n",
       "A primeira linha define o nome da fun\u00e7\u00e3o e, entre par\u00eanteses, as vari\u00e1veis que ela receber\u00e1. Na segunda linha a instru\u00e7\u00e3o `return` indica qual o valor que ela retornar\u00e1. Ex.:\n",
       "\n",
-      "`y = minhaEq(10)`\n",
+      "```python\n",
+      "y = minhaEq(10)\n",
+      "```\n",
       "\n",
       "retornar\u00e1 o valor de `3*10**2 + 2*10 - 10`\n",
       "\n",
@@ -865,23 +857,29 @@
      "source": [
       "As fun\u00e7\u00f5es podem ter m\u00faltiplas vari\u00e1veis se necess\u00e1rio e m\u00faltiplas instru\u00e7\u00f5es, desde que elas estejam alinhadas:\n",
       "\n",
-      "`def eqGenerica(a,b,c,x):\n",
+      "```python\n",
+      "def eqGenerica(a,b,c,x):\n",
       "     y = a*x**2 + b*x + c\n",
-      "     return y`\n",
+      "     return y\n",
+      "```\n",
       "     \n",
       "Podemos retornar mais do que uma vari\u00e1vel tamb\u00e9m se necess\u00e1rio:\n",
       "\n",
-      "`def derivadaParcial(x,y):\n",
+      "```python\n",
+      "def derivadaParcial(x,y):\n",
       "     dx = 2*x\n",
       "     dy = 2*y\n",
-      "     return dx,dy`\n",
+      "     return dx,dy\n",
+      "```\n",
       "     \n",
       "E ela pode retornar qualquer um dos tipos que vimos at\u00e9 agora, at\u00e9 mesmo retornar uma fun\u00e7\u00e3o:\n",
       "\n",
-      "`def geraEq(a,b,c):\n",
+      "```python\n",
+      "def geraEq(a,b,c):\n",
       "    def eq2(x):\n",
       "        return a*x**2 + b*x + c\n",
-      "    return eq2`"
+      "    return eq2\n",
+      "```"
      ]
     },
     {
@@ -946,13 +944,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 5,
        "text": [
-        "<IPython.core.display.HTML at 0x7fe09df87c50>"
+        "<IPython.core.display.HTML at 0x7f7bd4500c90>"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -968,92 +966,20 @@
      "source": [
       "O Python conta com diversas bibliotecas que automatizam muitas tarefas e permitem realizarmos experimentos interessantes.\n",
       "\n",
-      "Para o pr\u00f3ximo exerc\u00edcio vamos utilizar a biblioteca `urlib.request` que permite obter dados de p\u00e1ginas da internet. \n",
-      "Cadastre-se em http://api.yandex.com/ e obtenha um \"API KEY\" e coloque essa string na vari\u00e1vel APIKEY no c\u00f3digo abaixo.\n",
+      "Uma biblioteca \u00fatil para o BC&T \u00e9 a `matplotlib` que permite plotar gr\u00e1ficos diversos. Para us\u00e1-la no iPython Notebook basta executar o comando:\n",
       "\n",
-      "Verifique tamb\u00e9m as poss\u00edveis combina\u00e7\u00f5es de idiomas de tradu\u00e7\u00f5es na p\u00e1gina: http://api.yandex.com/translate/doc/dg/reference/getLangs.xml\n",
-      "\n",
-      "Para traduzir o texto 'To be or not to be' do ingl\u00eas para o portugu\u00eas, por exemplo, basta acessar a url:\n",
-      "\n",
-      "https://translate.yandex.net/api/v1.5/tr.json/translate?key=APIKEY&lang=en-pt&text=To+be,+or+not+to+be\n",
-      "\n",
-      "substituindo APIKEY pela sua chave.\n",
-      "\n",
-      "Repare que essa url \u00e9 composta de tr\u00eas vari\u00e1veis: \n",
-      "\n",
-      "* APIKEY\n",
-      "* lang: representa o idioma de origem e destino\n",
-      "* text: o texto a ser traduzido com os espa\u00e7os substitu\u00eddos por +\n",
-      "\n",
-      "Complete o programa abaixo para que:\n",
-      "\n",
-      "* a vari\u00e1vel APIKEY contenha a sua chave\n",
-      "* ele pe\u00e7a para entrar com um texto a ser traduzido, substituindo o espa\u00e7o por + (veja a documenta\u00e7\u00e3o de [strings](https://docs.python.org/2/library/string.html)\n",
-      "* crie uma lista com poss\u00edveis idiomas de tradu\u00e7\u00e3o e pe\u00e7a para o usu\u00e1rio selecionar os idiomas\n",
-      "* componha a url concatenando os dados obtidos para obter a tradu\u00e7\u00e3o utilizando o comando `urlopen()` para abrir a p\u00e1gina e `read()` para ler o conte\u00fado dela."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "HTML('<iframe src=\"https://trinket.io/embed/python/da11824ba1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<iframe src=\"https://trinket.io/embed/python/da11824ba1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 27,
-       "text": [
-        "<IPython.core.display.HTML at 0x7fe09df87a50>"
-       ]
-      }
-     ],
-     "prompt_number": 27
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# no ipython notebook temos que usar a biblioteca requests\n",
-      "import requests\n",
-      "\n",
-      "APIKEY = 'trnsl.1.1.20141019T153920Z.c2ea774a4c45ef4b.4d2fccbf061f8f6903690b716126f7cd8ff79345'\n",
-      "saida = requests.get('https://translate.yandex.net/api/v1.5/tr.json/translate?key=%s&lang=en-pt&text=To+be,+or+not+to+be' % (APIKEY))\n",
-      "print saida.text"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{\"code\":200,\"lang\":\"en-pt\",\"text\":[\"Ser ou n\u00e3o ser\"]}\n"
-       ]
-      }
-     ],
-     "prompt_number": 26
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Outra biblioteca interessante \u00e9 a `matplotlib` que permite plotar gr\u00e1ficos diversos. Para us\u00e1-la no iPython Notebook basta executar o comando:\n",
-      "\n",
-      "`%pylab inline`\n",
+      "```python\n",
+      "%pylab inline\n",
+      "```\n",
       "\n",
       "Vamos plotar alguns pontos de nossa fun\u00e7\u00e3o quadr\u00e1tica utilizando o comando `plot(x,y)`, onde **x** e **y** s\u00e3o listas com valores correspondentes a abscissa e ordenada, respectivamente. Basicamente temos que **x** ser\u00e1 uma lista de pontos que queremos plotar e **y** a aplica\u00e7\u00e3o da fun\u00e7\u00e3o `fx()` em cada ponto de **x**.\n",
       "\n",
       "DICA:\n",
       "Podemos aplicar uma fun\u00e7\u00e3o em cada ponto de uma lista utilizando o comando \n",
       "\n",
-      "`map( funcao, lista )`"
+      "```python\n",
+      "map( funcao, lista )\n",
+      "```"
      ]
     },
     {
@@ -1093,6 +1019,82 @@
       }
      ],
      "prompt_number": 33
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Para o pr\u00f3ximo exerc\u00edcio vamos utilizar a biblioteca `urlib.request` que permite obter dados de p\u00e1ginas da internet. \n",
+      "Cadastre-se em http://api.yandex.com/ e obtenha um \"API KEY\" e coloque essa string na vari\u00e1vel APIKEY no c\u00f3digo abaixo.\n",
+      "\n",
+      "Verifique tamb\u00e9m as poss\u00edveis combina\u00e7\u00f5es de idiomas de tradu\u00e7\u00f5es na p\u00e1gina: http://api.yandex.com/translate/doc/dg/reference/getLangs.xml\n",
+      "\n",
+      "Para traduzir o texto 'To be or not to be' do ingl\u00eas para o portugu\u00eas, por exemplo, basta acessar a url:\n",
+      "\n",
+      "https://translate.yandex.net/api/v1.5/tr.json/translate?key=APIKEY&lang=en-pt&text=To+be,+or+not+to+be\n",
+      "\n",
+      "substituindo APIKEY pela sua chave.\n",
+      "\n",
+      "Repare que essa url \u00e9 composta de tr\u00eas vari\u00e1veis: \n",
+      "\n",
+      "* APIKEY\n",
+      "* lang: representa o idioma de origem e destino\n",
+      "* text: o texto a ser traduzido com os espa\u00e7os substitu\u00eddos por +\n",
+      "\n",
+      "Complete o programa abaixo para que:\n",
+      "\n",
+      "* a vari\u00e1vel APIKEY contenha a sua chave\n",
+      "* ele pe\u00e7a para entrar com um texto a ser traduzido, substituindo o espa\u00e7o por + (veja a documenta\u00e7\u00e3o de [strings](https://docs.python.org/2/library/string.html) )\n",
+      "* crie uma lista com poss\u00edveis idiomas de tradu\u00e7\u00e3o e pe\u00e7a para o usu\u00e1rio selecionar os idiomas\n",
+      "* componha a url concatenando os dados obtidos para obter a tradu\u00e7\u00e3o utilizando o comando `urlopen()` para abrir a p\u00e1gina e `read()` para ler o conte\u00fado dela."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "HTML('<iframe src=\"https://trinket.io/embed/python/da11824ba1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe src=\"https://trinket.io/embed/python/da11824ba1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "<IPython.core.display.HTML at 0x7f7bd4500d90>"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# no ipython notebook temos que usar a biblioteca requests\n",
+      "import requests\n",
+      "\n",
+      "APIKEY = 'trnsl.1.1.20141019T153920Z.c2ea774a4c45ef4b.4d2fccbf061f8f6903690b716126f7cd8ff79345'\n",
+      "saida = requests.get('https://translate.yandex.net/api/v1.5/tr.json/translate?key=%s&lang=en-pt&text=To+be,+or+not+to+be' % (APIKEY))\n",
+      "print saida.text"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\"code\":200,\"lang\":\"en-pt\",\"text\":[\"Ser ou n\u00e3o ser\"]}\n"
+       ]
+      }
+     ],
+     "prompt_number": 26
     }
    ],
    "metadata": {}
