--- a/Aula01Old.ipynb
+++ b/Aula01Old.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6f01a26da80e43c683cc31b05dbfd88913569b6ef81c1c294772a3b02656ba7a"
+  "signature": "sha256:da358d7e3afbde90b62e46606b3b9debc510eb55ab07a675456346f226447f33"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -335,6 +335,7 @@
      "collapsed": false,
      "input": [
       "# Exerc\u00edcio 01\n",
+      "#HTML('<iframe src=\"https://trinket.io/embed/python/e8b89a2de1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')\n",
       "import math\n",
       "\n",
       "# Vamos fazer algumas opera\u00e7\u00f5es b\u00e1sicas: escreva o c\u00f3digo logo abaixo das instru\u00e7\u00f5es, ao completar a tarefa aperte \"shift+enter\"\n",
@@ -375,7 +376,7 @@
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -749,6 +750,7 @@
      "collapsed": false,
      "input": [
       "#Exerc\u00edcio 02\n",
+      "#HTML('<iframe src=\"https://trinket.io/embed/python/3679faf148\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')\n",
       "import math\n",
       "# 1) entre com o numero do mes do seu nascimento na variavel 'mes' e siga as instru\u00e7\u00f5es abaixo colocando o resultado\n",
       "# na vari\u00e1vel 'resultado'.\n",
@@ -803,6 +805,7 @@
      "collapsed": false,
      "input": [
       "#Exerc\u00edcio 03\n",
+      "#HTML('<iframe src=\"https://trinket.io/embed/python/395e643359\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')\n",
       "\n",
       "# 1) Pe\u00e7a para o usuario digitar o nome e imprima \"Ola <nome>, como vai?\"\n",
       "nome = \n",
@@ -1660,9 +1663,9 @@
       "print mt.sqrt(2), mt.exp(3)\n",
       "```\n",
       "\n",
-      "### Exerc\u00edcio Avan\u00e7ado\n",
+      "**Exemplo**\n",
       "\n",
-      "Para o pr\u00f3ximo exerc\u00edcio vamos utilizar a biblioteca `requests` que permite obter dados de p\u00e1ginas da internet. \n",
+      "Para o pr\u00f3ximo exerc\u00edcio vamos utilizar a biblioteca `urlib.request` que permite obter dados de p\u00e1ginas da internet. \n",
       "Cadastre-se em http://api.yandex.com/ e obtenha um \"API KEY\" e coloque essa string na vari\u00e1vel APIKEY no c\u00f3digo abaixo.\n",
       "\n",
       "Verifique tamb\u00e9m as poss\u00edveis combina\u00e7\u00f5es de idiomas de tradu\u00e7\u00f5es na p\u00e1gina: http://api.yandex.com/translate/doc/dg/reference/getLangs.xml\n",
@@ -1671,7 +1674,7 @@
       "\n",
       "https://translate.yandex.net/api/v1.5/tr.json/translate?key=APIKEY&lang=en-pt&text=To+be,+or+not+to+be\n",
       "\n",
-      "substituindo *APIKEY* pela sua chave.\n",
+      "substituindo APIKEY pela sua chave.\n",
       "\n",
       "Repare que essa url \u00e9 composta de tr\u00eas vari\u00e1veis: \n",
       "\n",
@@ -1684,8 +1687,31 @@
       "* a vari\u00e1vel APIKEY contenha a sua chave\n",
       "* ele pe\u00e7a para entrar com um texto a ser traduzido, substituindo o espa\u00e7o por + (veja a documenta\u00e7\u00e3o de [strings](https://docs.python.org/2/library/string.html) )\n",
       "* crie uma lista com poss\u00edveis idiomas de tradu\u00e7\u00e3o e pe\u00e7a para o usu\u00e1rio selecionar os idiomas\n",
-      "* componha a url concatenando os dados obtidos para obter a tradu\u00e7\u00e3o utilizando o comando `requests.get()` para abrir a p\u00e1gina e `.text` para ler o conte\u00fado dela."
+      "* componha a url concatenando os dados obtidos para obter a tradu\u00e7\u00e3o utilizando o comando `urlopen()` para abrir a p\u00e1gina e `read()` para ler o conte\u00fado dela."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "HTML('<iframe src=\"https://trinket.io/embed/python/da11824ba1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe src=\"https://trinket.io/embed/python/da11824ba1\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "<IPython.core.display.HTML at 0x7f66a3225450>"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -1694,34 +1720,8 @@
       "# no ipython notebook temos que usar a biblioteca requests\n",
       "import requests\n",
       "\n",
-      "# inclua sua API key, lembre-se que deve ser uma string\n",
-      "APIKEY = \n",
-      "\n",
-      "# pegue o texto do usuario\n",
-      "texto = input('Entre com o texto para traduzir')\n",
-      "# e substitua os espacos pelo sinal de + (procure o comando na documenta\u00e7\u00e3o de strings)\n",
-      "texto = \n",
-      "\n",
-      "# preencha a lista de idiomas e pegue a escolha com o usuario\n",
-      "idiomas = []\n",
-      "escolha = input('PT-ingles (0) ou Ingles-PT (1)?')\n",
-      "\n",
-      "# monte a url concatenando os dados\n",
-      "url = 'https://translate.yandex.net/api/v1.5/tr.json/translate?key='\n",
-      "# concatene a chave\n",
-      "url = url + APIKEY\n",
-      "# concatene o texto '&lang'\n",
-      "url = url + '&lang'\n",
-      "# concatene o c\u00f3digo do idioma\n",
-      "\n",
-      "# concatene '&text'\n",
-      "\n",
-      "# concatene o texto digitado pelo usuario\n",
-      "\n",
-      "# o comando urlopen(url) abre a pagina\n",
-      "saida = requests.get(url)\n",
-      "\n",
-      "# o comando saida.read() recupera o conteudo\n",
+      "APIKEY = 'trnsl.1.1.20141019T153920Z.c2ea774a4c45ef4b.4d2fccbf061f8f6903690b716126f7cd8ff79345'\n",
+      "saida = requests.get('https://translate.yandex.net/api/v1.5/tr.json/translate?key=%s&lang=en-pt&text=To+be,+or+not+to+be' % (APIKEY))\n",
       "print saida.text"
      ],
      "language": "python",
