--- a/Aula01_EX.ipynb
+++ b/Aula01_EX.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:620d78f06ef8485ef2df74ccf6c84bfa8d6f4e972c3577d76c4d7fefbd031acf"
+  "signature": "sha256:360f10998b6c95b6398000de960910726807f939510f4d9474b6eb8d73dc302c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -47,77 +47,114 @@
      "prompt_number": 6
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Fa\u00e7a um algoritmo para calcular o volume de uma esfera: 4.pi.r\u00b3/3\n",
-      "# pegue o valor de r do usu\u00e1rio"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Supondo que o pre\u00e7o do rod\u00edzio de uma churrascaria est\u00e1 R$ 48,50 por pessoa. \n",
-      "# Eles oferecem um desconto de 25% para grupos maiores que 20 e o cobrado pelo\n",
-      "# couvert \u00e9 R$ 4,00 para a primeira pessoa e R$ 1,00 para as pessoas seguintes\n",
-      "# Calcule quantos reais um grupo de 35 pessoas economizar\u00e1 ao se juntarem."
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Se eu sair de minha casa as 06:30, correr 1 km na velocidade 10 m/s, \n",
-      "# 2 km na velocidade de 20 m/s e mais 1,5 km em 15 m/s, retornando em casa.\n",
-      "# Que horas eu chegarei para o caf\u00e9 da manh\u00e3?"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Fa\u00e7a um algoritmo que obtenha valores de a, b, c do usu\u00e1rio\n",
-      "# e calcule as ra\u00edzes da equa\u00e7\u00e3o do segundo grau a.x\u00b2 + b.x + c\n",
+     "source": [
+      "**Exerc\u00edcio 2:** Fa\u00e7a um algoritmo para calcular o volume de uma esfera dado por\n",
       "\n",
+      "$$\\frac{4}{3} \\cdot \\pi \\cdot r^{3}$$\n",
       "\n",
-      "# Agora use a biblioteca sympy para obter as ra\u00edzes\n",
-      "# verifique como fazer isso atrav\u00e9s do tutorial:\n",
-      "# http://nbviewer.ipython.org/github/jrjohansson/scientific-python-lectures/blob/master/Lecture-5-Sympy.ipynb\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
+      "Pegue o valor de *r* do usu\u00e1rio."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Dado os valores x e y e 0<=w<=1, pelo usu\u00e1rio\n",
-      "# determine a m\u00e9da ponderada por w de x e y\n"
+      "# EX02"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 3:** Supondo que o pre\u00e7o do rod\u00edzio de uma churrascaria est\u00e1 R\\$ 48,50 por pessoa. Eles oferecem um desconto de 25\\% para grupos maiores que 20 e o cobrado pelo couvert \u00e9 R\\$ 4,00 para a primeira pessoa e R\\$ 1,00 para as pessoas seguintes.\n",
+      "Calcule quantos reais um grupo de 35 pessoas economizar\u00e1 ao se juntarem."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# EX03"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 4:** Se eu sair de minha casa as 06:30, correr 1 km na velocidade 10 m/s, 2 km na velocidade de 20 m/s e mais 1,5 km em 15 m/s, retornando em casa. Que horas eu chegarei para o caf\u00e9 da manh\u00e3?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# EX04"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 5:** Fa\u00e7a um algoritmo que obtenha valores de a, b, c do usu\u00e1rio e calcule as ra\u00edzes da equa\u00e7\u00e3o do segundo grau $a \\cdot x^{2} + b \\cdot x + c$.\n",
+      "\n",
+      "Em seguida, utilize a biblioteca sympy para obter as ra\u00edzes. Verifique como fazer isso atrav\u00e9s do [tutorial](http://nbviewer.ipython.org/github/jrjohansson/scientific-python-lectures/blob/master/Lecture-5-Sympy.ipynb)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# EX05\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 6:** Dado os valores de *x* e *y* e um valor de $0 \\leq w \\leq 1$, todos eles digitado pelo usu\u00e1rio, determine a m\u00e9dia ponderada dada por $w \\cdot x + (1.0 - w) \\cdot y$."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# EX06\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 7:** Dado o c\u00f3digo abaixo que utiliza as bibliotecas *requests* e *json* para obter a temperatura atual em Fahrenheit de uma dada coordenada, converta e imprima a temperatura em Celsius."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# EX07\n",
       "# Conforme especificado na documenta\u00e7\u00e3o da seguinte API:\n",
       "# https://developer.forecast.io/docs/v2\n",
       "# Ao acessar a url https://api.forecast.io/forecast/APIKEY/LATITUDE,LONGITUDE\n",
@@ -144,10 +181,11 @@
       "url = 'https://api.forecast.io/forecast/'+APIKEY+'/'+LAT+','+LONG\n",
       "saida = requests.get(url)\n",
       "\n",
-      "# pegando a temperatura em Farenheit\n",
+      "# pegando a temperatura em Fahrenheit\n",
       "# a vari\u00e1vel t cont\u00e9m a temperatura em F, como um valor decimal\n",
       "t = json.loads(saida.text)['currently']['temperature']\n",
       "\n",
+      "# O exerc\u00edcio come\u00e7a aqui!\n",
       "# converta para Celsius e imprima"
      ],
      "language": "python",
@@ -156,9 +194,18 @@
      "prompt_number": 22
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 8:** Converta a idade do usu\u00e1rio para segundos. Fa\u00e7a a mesma convers\u00e3o levando em conta os anos bissextos."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#EX08\n",
+      "\n",
       "# Converta a idade digitada pelo usu\u00e1rio em segundos\n",
       "\n",
       "\n",
@@ -171,9 +218,18 @@
      "prompt_number": 23
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Exerc\u00edcio 9:** Calcule a \u00e1rea ou volume das seguintes formas utilizando as dimens\u00f5es dadas pelo usu\u00e1rio."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#EX09\n",
+      "\n",
       "# Para as formas abaixo, calcule a \u00e1rea ou volume conforme apropriado\n",
       "# Pegue as dimens\u00f5es do usu\u00e1rio.\n",
       "\n",
@@ -193,14 +249,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 24
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
