--- a/Aula2.ipynb
+++ b/Aula2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6cb68a3b8c83e752a97bbb23088dd2ef5ebccec61a512823a843e460ce166fb3"
+  "signature": "sha256:a9fc08213f9f7ea18ae2df22e7e84dd0a98f5bdfe89fc33d8cbafadbf28bbf75"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -136,13 +136,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 1,
        "text": [
-        "<IPython.core.display.HTML at 0x7f77488d36d0>"
+        "<IPython.core.display.HTML at 0x7f06bdfd6a50>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -304,24 +304,37 @@
      "collapsed": false,
      "input": [
       "#Exerc\u00edcio 04\n",
-      "HTML('<iframe src=\"https://trinket.io/embed/python/511db39340\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>')"
+      "# Escreva o c\u00f3digo logo abaixo das instru\u00e7\u00f5es,\n",
+      "# ao completar a tarefa clique em \"Run\" e\n",
+      "# verifique se a resposta est\u00e1 de acordo com\n",
+      "# o esperado\n",
+      "\n",
+      "# 1) Crie uma fun\u00e7\u00e3o que retorne uma fun\u00e7\u00e3o\n",
+      "# quadr\u00e1tica de duas vari\u00e1veis no seguinte formato:\n",
+      "# f(x,y) = a*x**2 + b*x**2 + c*x + d*y + e\n",
+      "# o usu\u00e1rio definir\u00e1 os valores de a,b,c,d,e\n",
+      "def minhaEq(a,b,c,d,e):\n",
+      "\n",
+      "fxy = minhaEq(2,3,2,1,4)    \n",
+      "print fxy(2,3) # resultado 46\n",
+      "\n",
+      "# 2) Crie uma fun\u00e7\u00e3o que retorne uma fun\u00e7\u00e3o\n",
+      "# de derivada dessa mesma fun\u00e7\u00e3o quadr\u00e1tica\n",
+      "def minhaDerivada(a,b,c,d):\n",
+      "\n",
+      "dfxy = minhaDerivada(2,3,2,1)    \n",
+      "print dfxy(2,3) # resultado 10 e 19\n",
+      "\n",
+      "# 3) Crie uma fun\u00e7\u00e3o que retorne uma lista com\n",
+      "# os zeros das duas derivadas parciais\n",
+      "def listaZeros(a,b,c,d):\n",
+      "\n",
+      "    \n",
+      "print listaZeros(2,3,2,1) # resultado [-0.5, -0.16]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<iframe src=\"https://trinket.io/embed/python/511db39340\" width=\"100%\" height=\"400\" frameborder=\"0\" marginwidth=\"0\" marginheight=\"0\" allowfullscreen></iframe>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": [
-        "<IPython.core.display.HTML at 0x7f77488d39d0>"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "heading",
