--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a2edc4263911f09874a938e2392f4cde6e6736d7fba6f56874ac8709f34d7068"
+  "signature": "sha256:e1269cc501a61d397e70b3ca78253de4e8151d15d344fe2d2541624b404174b7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -136,13 +136,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 2,
        "text": [
-        "<IPython.core.display.HTML at 0x7f861d264f90>"
+        "<IPython.core.display.HTML at 0x7f26344818d0>"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -199,7 +199,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Instalando e utilizando o Anaconda Python e IPython Notebook no Linux:"
+      "Instalando e utilizando o Anaconda Python e IPython Notebook no Linux (em ingl\u00eas):"
      ]
     },
     {
@@ -225,19 +225,19 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 29,
+       "prompt_number": 3,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x7f861d21b8d0>"
+        "<IPython.lib.display.YouTubeVideo at 0x7f263449a350>"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Instalando e utilizando o Anaconda Python e IPython Notebook no Windows:"
+      "Instalando e utilizando o Anaconda Python e IPython Notebook no Windows (em ingl\u00eas):"
      ]
     },
     {
@@ -263,13 +263,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 30,
+       "prompt_number": 4,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x7f861d21b910>"
+        "<IPython.lib.display.YouTubeVideo at 0x7f263449a450>"
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -392,12 +392,87 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Para fazer altera\u00e7\u00f5es nos arquivos primeiro \u00e9 necess\u00e1rio criar uma c\u00f3pia local. Para os sistemas [Windows](https://windows.github.com/) e [OSX (MAC)](https://mac.github.com/) existe uma ferramenta gr\u00e1fica para realizar os procedimentos de c\u00f3pia e atualiza\u00e7\u00e3o, eles podem ser obtidos nos respectivos links. No Linux basta instalar o pacote **git** atrav\u00e9s do instalador de pacotes."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Windows e OS/X "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*Escrever instru\u00e7\u00f5es com telas*"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Linux"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Abra um terminal e acesse a pasta *home* do seu usu\u00e1rio:\n",
+      "\n",
+      "```bash\n",
+      "cd ~/\n",
+      "```\n",
+      "\n",
+      "Em seguida digite o comando:\n",
+      "\n",
+      "```bash\n",
+      "git clone https://github.com/USUARIO/PIPYTHON\n",
+      "```\n",
+      "\n",
+      "substituindo *USUARIO* pelo seu nome de usu\u00e1rio. Isso criar\u00e1 a pasta *PIPYTHON* contendo todas as aulas. Os notebooks podem ser acessados e editados atrav\u00e9s do IPython Notebook, acessando esse diret\u00f3rio.\n",
+      "Ap\u00f3s realizar alguma altera\u00e7\u00e3o, nessa mesma pasta no terminal digite os seguintes comandos em sequ\u00eancia:\n",
+      "\n",
+      "```bash\n",
+      "git add *\n",
+      "git commit -m \"alteracoes\"\n",
+      "git push\n",
+      "```\n",
+      "\n",
+      "Ser\u00e1 necess\u00e1rio digitar o login e senha do github para concluir a opera\u00e7\u00e3o. Seu notebook poder\u00e1 ser acessado pelo endere\u00e7o:\n",
+      "\n",
+      "http://nbviewer.ipython.org/github/USUARIO/PIPYTHON/blob/master/NOME.ipynb \n",
+      "\n",
+      "onde *USUARIO* \u00e9 seu nome de usu\u00e1rio e *NOME* o nome do Notebook. Veja por exemplo o endere\u00e7o de acesso dessa aula, nomeada *aula0* dispon\u00edvel no meu GitHub (*folivetti*): \n",
+      "\n",
+      "http://nbviewer.ipython.org/github/folivetti/PIPYTHON/blob/master/aula0.ipynb"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "print \"Bons estudos!\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Bons estudos!\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     }
    ],
    "metadata": {}
