--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -1,7 +1,8 @@
 {
  "metadata": {
+  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:e1269cc501a61d397e70b3ca78253de4e8151d15d344fe2d2541624b404174b7"
+  "signature": "sha256:347f2492d221e98604b44521a95a4db4803b6070f06864a16ac559109e00349f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +19,11 @@
       "HTML(open(css_file, \"r\").read())"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -147,7 +152,11 @@
     {
      "cell_type": "heading",
      "level": 1,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Introdu\u00e7\u00e3o \u00e0 Programa\u00e7\u00e3o em Python"
      ]
@@ -155,14 +164,22 @@
     {
      "cell_type": "heading",
      "level": 2,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "T\u00f3picos"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "source": [
       "* Instalando o Anaconda Python\n",
       "* Utilizando o IPython Notebook\n",
@@ -172,14 +189,22 @@
     {
      "cell_type": "heading",
      "level": 2,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Instalando o Anaconda Python"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "source": [
       "Fa\u00e7a o download no site [Anaconda Python](https://store.continuum.io/cshop/anaconda/)\n",
       "\n",
@@ -188,7 +213,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Na tela de download clique no bot\u00e3o destacado pelo ret\u00e2ngulo vermelho e siga as instru\u00e7\u00f5es de instala\u00e7\u00e3o do quadro destacado pelo ret\u00e2ngulo azul. No windows basta executar o arquivo do download e seguir os passos.\n",
       "\n",
@@ -197,7 +226,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Instalando e utilizando o Anaconda Python e IPython Notebook no Linux (em ingl\u00eas):"
      ]
@@ -209,7 +242,11 @@
       "YouTubeVideo('NwyIuWK80gQ', 640,480)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -235,7 +272,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Instalando e utilizando o Anaconda Python e IPython Notebook no Windows (em ingl\u00eas):"
      ]
@@ -247,7 +288,11 @@
       "YouTubeVideo('oXnnRpTGT2M',640,480)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -274,14 +319,22 @@
     {
      "cell_type": "heading",
      "level": 2,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Utilizando o IPython Notebook"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "source": [
       "No Windows, execute **Anaconda Launcher** no menu iniciar, no Mac execute **Launcher.app** no diret\u00f3rio ~/anaconda, e no Linux execute **ipython notebook** em uma janela de terminal.\n",
       "Nos dois primeiros casos aparecer\u00e1 a seguinte janela:\n",
@@ -291,7 +344,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Clique em **launch** ao lado do IPython Notebook e ent\u00e3o abrir\u00e1 a seguinte p\u00e1gina no seu navegador de internet:\n",
       "\n",
@@ -300,7 +357,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Nessa p\u00e1gina \u00e9 poss\u00edvel navegar pelos diret\u00f3rios de seu computador em busca de Notebooks. Clicando em **New Notebook** abrir\u00e1 um novo notebook em outra aba de seu navegador.\n",
       "A tela inicial \u00e9 apresentada e descrita a seguir:\n",
@@ -312,7 +373,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Para alterar o nome do Notebook basta clicar no nome atual (Untitled0) e digitar o novo nome.\n",
       "O tipo padr\u00e3o de c\u00e9lula \u00e9 o **Code** que permite digitar e executar c\u00f3digos em Python. Digite o seguinte c\u00f3digo nessa c\u00e9lula e aperte **Shift+Enter**:\n",
@@ -358,14 +423,22 @@
     {
      "cell_type": "heading",
      "level": 2,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Copiando os notebooks de aula"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "source": [
       "Tutorial do github para:\n",
       "\n",
@@ -377,7 +450,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "Nosso curso usar\u00e1 o [Github](https://github.com/) para armazenar as aulas e exerc\u00edcios no formato IPython Notebook, cada aluno criar\u00e1 um reposit\u00f3rio no Github para guardar suas pr\u00f3prias anota\u00e7\u00f5es e solu\u00e7\u00f5es para os exerc\u00edcios.\n",
       "Durante as aulas iremos explorar as diferentes solu\u00e7\u00f5es criadas pelos alunos em seus respectivos reposit\u00f3rios.\n",
@@ -393,7 +470,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "Para fazer altera\u00e7\u00f5es nos arquivos primeiro \u00e9 necess\u00e1rio criar uma c\u00f3pia local. Para os sistemas [Windows](https://windows.github.com/) e [OSX (MAC)](https://mac.github.com/) existe uma ferramenta gr\u00e1fica para realizar os procedimentos de c\u00f3pia e atualiza\u00e7\u00e3o, eles podem ser obtidos nos respectivos links. No Linux basta instalar o pacote **git** atrav\u00e9s do instalador de pacotes."
      ]
@@ -401,14 +482,22 @@
     {
      "cell_type": "heading",
      "level": 3,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Windows e OS/X "
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "source": [
       "*Escrever instru\u00e7\u00f5es com telas*"
      ]
@@ -416,14 +505,22 @@
     {
      "cell_type": "heading",
      "level": 3,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Linux"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "Abra um terminal e acesse a pasta *home* do seu usu\u00e1rio:\n",
       "\n",
@@ -462,7 +559,11 @@
       "print \"Bons estudos!\""
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "output_type": "stream",
